--- a/FASTN/ds/index.html
+++ b/FASTN/ds/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%;">
 <head>
-<meta charset="UTF-8"><base href="/websiterutu/">
+<meta charset="UTF-8"><base href="/risa23/">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <title></title>
-<link rel="shortcut icon" href="/-/riddhis23.github.io/websiterutu/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/-/riddhis23.github.io/risa23/favicon.ico" type="image/x-icon">
 <script type="ftd" id="ftd-data">
 {
 "ftd#breakpoint-width": {
